Fixing overlapping in submitButton

--- a/src/pages/create-list/components/horizontal-scrollbar/style.module.css
+++ b/src/pages/create-list/components/horizontal-scrollbar/style.module.css
@@ -12,6 +12,7 @@
   white-space: nowrap;
   width: 90%;
   padding: 10px;
+  background-color: blue;
 }
 
 .item {
